# rebel_worlds

./: CMakeLists.txt  README.md  package.xml
env-hooks/: rebel_worlds.dsv.in
launch/: rebel_worlds.launch.py
models/rebel/: model.config  model.sdf
worlds/: datafloor.sdf
