<?xml version="1.0"?>
<package format="3">
  <name>rebel_worlds</name>
  <version>1.0.5</version>
  <description>
    Package for rebel_worlds to use in robot applications.
  </description>
  <license>MIT-0</license>
  <author email="nk@gmail.com">Nilutpol Kashyap</author>
  <maintainer email="nk@gmail.com">Nilutpol Kashyap</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>ros_gz_sim</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
